// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`forSelf > should skip existing mapping properties from another mapping 1`] = `
[
  [
    [
      "foo",
    ],
    [
      [
        "foo",
      ],
      [
        [
          6,
          [Function],
        ],
      ],
    ],
    [
      [Function],
      [Function],
    ],
  ],
  [
    [
      "bar",
    ],
    [
      [
        "bar",
      ],
      [
        [
          6,
          [Function],
        ],
      ],
    ],
    [
      [Function],
      [Function],
    ],
  ],
]
`;

exports[`forSelf > should update mapping properties with another mapping 1`] = `
[
  [
    [
      "foo",
    ],
    [
      [
        "foo",
      ],
      [
        [
          6,
          [Function],
        ],
      ],
    ],
    [
      [Function],
      [Function],
    ],
  ],
]
`;
